Working dynamic creation of component!

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="title_activity_review_selection_screen">ReviewSelectionScreen</string>
     <string name="wine_picture">Wine Picture</string>
     <string name="wine_title">Josh Wineries Cabernet Sauvignon 2018</string>
+    <string name="wine_title2">Josh Josh Josh</string>
     <string name="wine_description">Some description of a wine that resembles a faint aftertaste or borgoneise, but not so subtle either. A truly magnificant wine</string>
     <string name="details">Details</string>
     <string name="choose">Choose</string>
